2006-10-24  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-util.el (mm-codepage-iso-8859-list, mm-codepage-ibm-list): New
	variables.
	(mm-setup-codepage-iso-8859, mm-setup-codepage-ibm): New functions.
	(mm-charset-synonym-alist): Move some entries to
	mm-codepage-iso-8859-list.

	* gnus.el (gnus-getenv-nntpserver, gnus-select-method): Autoload.

2006-10-23  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-citation-line-format)
	(message-insert-formated-citation-line): Fix implementation of %E, %N
	and %n according to the doc string.

2006-10-20  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-check-BBDB, spam-enter-ham-BBDB, spam-parse-list): use
	car-safe to avoid bad parses

2006-10-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-group-make-doc-group): Work for non-ASCII group
	names.

	* gnus-sum.el (gnus-select-newsgroup): Decode group name.

2006-10-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-draft.el (gnus-draft-edit-message): Make sure to remove Date
	header.

	* message.el (message-draft-headers): Add Date.
	(message-headers-to-generate): Fix typo in docstring.

	* nndraft.el (nndraft-required-headers): New variable.
	(nndraft-generate-headers): Use it.

	* gnus-registry.el (gnus-registry-wash-for-keywords): Bind `word'.

2006-10-16  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-wash-for-keywords)
	(gnus-registry-find-keywords): new functions to allow easy searching of
	articles that are in the registry

2006-10-16  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-check-BBDB, spam-enter-ham-BBDB, spam-parse-list): use
	ietf-drums-parse-address instead of gnus-extract-address-components.
	Reported by Damien Elmes <damien@repose.cx>.

2006-10-19  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.el (gnus-mime): Remove unused custom group.

2006-10-13  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* mm-uu.el (mm-uu-pgp-signed-extract-1): Use RFC 2440 definition of